--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
             }
         }
 
-        stage('Build Docker Image') {
+        stae('Build Docker Image') {
             steps {
                 echo 'Building Docker image...'
                 sh "docker build -t venusri:latest ."
@@ -24,12 +24,17 @@ pipeline {
         }
 
         stage('Login to AWS ECR') {
-            steps {
-                echo 'Authenticating Docker with AWS ECR...'
-                sh """
-                    aws ecr get-login-password --region ap-south-1 | \
-                    docker login --username AWS --password-stdin 789065179702.dkr.ecr.ap-south-1.amazonaws.com
-                """
+           echo 'Authenticating Docker with AWS ECR...'
+                withCredentials([usernamePassword(credentialsId: 'aws-ecr-creds', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY')]) {
+                    sh '''
+                        # Create ECR repo if it does not exist
+                        aws ecr describe-repositories --repository-names venusri --region ap-south-1 || \
+                        aws ecr create-repository --repository-name ${ECR_REPO} --region ap-south-1
+                        
+                        # Login to ECR
+                        aws ecr get-login-password --region ap-south-1 | \
+                        docker login --username AWS --password-stdin 789065179702.dkr.ecr.ap-south-1.amazonaws.com
+                    '''
             }
         }
      
